--- a/.emacs.d/.gitignore
+++ b/.emacs.d/.gitignore
@@ -1,13 +1,12 @@
 # directory
 straight/
-elpa/
+.cache/
 auto-save-list/
 eshell/
 newsticker/
 var/
 
 # files
-ac-comphist.dat
 session.*
 projectile-bookmarks.eld
 recentf
