update gitignore & add lockfile

--- a/.emacs.d/.gitignore
+++ b/.emacs.d/.gitignore
@@ -1,5 +1,6 @@
 # directory
-straight/
+straight/repos
+straight/build
 elpa/
 .cache/
 auto-save-list/
@@ -9,6 +10,7 @@ newsticker/
 var/
 
 # files
+straight/build-cache.el
 session.*
 projectile-bookmarks.eld
 recentf
