Fix magit config
Latest magit does not use magit-popup anymore. Instead of it, new
package `transient` was introduced. This diff is fix this replacement.

See detail:
  `Breaking changes` section
  https://emacsair.me/2019/02/14/transient-0.1/

  > The Magit commands previously known as popups (and now as
    transient prefix commands) have been renamed from magit-WORD-popup
    to magit-WORD.

So, simply replace `magit-dispatch-popup` to `magit-dispatch`

modified:   .emacs.d/.gitignore
modified:   .emacs.d/init/080_git.el
modified:   .emacs.d/straight/versions/default.el

--- a/.emacs.d/.gitignore
+++ b/.emacs.d/.gitignore
@@ -1,6 +1,7 @@
 # directory
 straight/repos
 straight/build
+straight/modified
 elpa/
 .cache/
 auto-save-list/
@@ -9,6 +10,7 @@ eshell/
 newsticker/
 var/
 request/
+transient/
 
 # files
 straight/build-cache.el
